--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -19,7 +19,7 @@
           <a rel="noopener" class="nav-link" href="/check"><i class="fa fa-twitter"></i> Vérification de fichiers</a>
         </li>
         <li class="nav-item">
-          <a rel="noopener" class="nav-link" href="https://twitter.com/bootswatch"><i class="fa fa-twitter"></i> Consulter la blockchain</a>
+          <a rel="noopener" class="nav-link" href="/blockchain"><i class="fa fa-twitter"></i> Consulter la blockchain</a>
         </li>
       </ul>
     </div>
